# hydra

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
examples/leptos/: Cargo.toml
examples/leptos/src/: main.rs
examples/react/: package.json
examples/react/src/: AppState.tsx  hydra-client.ts
examples/webapp/: README.md  bun.lockb  vite.config.ts
examples/webapp/src/: App.tsx  AppState.tsx  IngressLog.tsx  main.tsx
merkle-dag-poc/: Cargo.toml
merkle-dag-poc/src/: main.rs
proto/: Cargo.toml
proto/src/: event.rs  ids.rs  lib.rs  memo.rs  message.rs  record.rs
proto/src/event/: ingress.rs
server/: Cargo.toml
server/src/: error.rs  fetch.rs  handler.rs  ingress.rs  main.rs  query.rs
server/src/handler/: ingress.rs
src/: appstate.rs  error.rs  fetch.rs  ingress.rs  main.rs  storage.rs
web/: Cargo.toml
web/src/: client.rs  lib.rs
