[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bincode = "1.3.3"
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sled = "0.34"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
tokio = { version = "1.38.0", features=["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.2", features = ["serde"] }
base64 = "0.21.1"
dirs = "5.0.1"
serde_json = "1.0"
html-escape = "0.2.13"