[package]
name = "hydra-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bytes = { version = "1.6.1", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
ulid = { version = "1.1.3", features = ["serde"] }
wasm-bindgen = { version = "0.2.92", features = ["serde"] }
