[package]
name = "hydra-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hydra-proto = { path = "../proto" }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
bincode = "1.3.3"
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sled = "0.34"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
tokio = { version = "1.38.0", features=["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.2", features = ["serde"] }
base64 = "0.21.1"
dirs = "5.0.1"
serde_json = "1.0"
html-escape = "0.2.13"
once_cell = "1.11.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures-util = "0.3.30"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
